Fix HTML formatting and add missing elements

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 									</p>
 									<ul class="actions special">
-										<li><a href="https://app.powerbi.com/groups/me/reports/ae810153-fff1-4aa4-8bad-06bc4951e344/9f7ff567240d46cd054e?experience=power-bi" target="_blank" class="button">VIEW PROJECT</a></li>
+										<li><a href="https://github.com/SusanaM123/Power_BI" target="_blank" class="button">VIEW PROJECT</a></li>
 									</ul>
 								</article>
 								
@@ -149,4 +149,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+</html>
 </html>
